@@ -1,9 +1,4 @@
-
-*** Update top level Makefile.am to generate a proper Windows package
-
-*** Write hashdeep man page
-
-*** Add support for hashdeep to use NSRL files
+*** Add support for hashdeep to use NSRL files and other types?
 
 *** Add 'make test' directive to run compiled programs on test files 
     and ensure compilation was successful. 
